# simulator_dev

./: README.md  main.py  output.xlsx  pyproject.toml  summary.csv
00constants/: Constants.xlsx  ~$Constants.xlsx
0_Wind/: Statistic_Wind.xlsx
1_Thrust/: thrust_K240_20230604.xlsx
3_Setting/Noshiro_sea_2023/: Map.json  Rocket.json  Simulator.json  Wind.json
3_Setting/Oshima_sea_2023/: Simulator.json  Thrust.json  Wind.json
4_Results/2023-0816-065252/Copy_Setting/: Launcher.json  Rocket.json
4_Results/2023-0816-065403/Copy_Setting/: Information.json  Physics.json  Simulator.json  Wind.json
4_Results/2023-1201-220817/Copy_Setting/: Information.json  Thrust.json
4_Results/2023-1201-231242/Copy_Setting/: Physics.json
mypackages/: pre_processing.py  test2.py
mypackages/for_main_processing/: __init__.py  calculate_variables.py  calculate_vectors.py  create_xlsxl.py  save_data.py  solve_ode-light-lignt.py  solve_ode-light.py  solve_ode_full_output.py  trans_coordinates.py
mypackages/for_main_processing/for_calculate_variables/: __init__.py  calculate_Cp.py  calculate_aero_coefficients.py  calculate_thrust.py  calculate_wind.py  test3.py
mypackages/for_post_processing/: class_plot.py  output_to_excel.py
mypackages/for_pre_processing/: __init__.py  input_from_Setting.py  make_dirs.py  save_Setting.py  test.py
test/: test.py  test.xlsx
